--- a/src/styles/first_contents.css
+++ b/src/styles/first_contents.css
@@ -15,6 +15,9 @@ div.first_content_container {
   left: 50%;
   top: 50%;
   transform: translateX(-50%) translateY(-50%);
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 div.first_content_container .first_content {
   position: absolute;
@@ -24,7 +27,8 @@ div.first_content_container .first_content {
   width: -moz-max-content;
   width: max-content;
   pointer-events: none;
+  font-size: 2rem;
 }
 div.first_content_container .first_content.active {
   pointer-events: fill;
-}/*# sourceMappingURL=homepage.css.map */
+}/*# sourceMappingURL=first_contents.css.map */
