Adding showcase page

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,6 +1,7 @@
 ---
 import { Image } from "astro:assets"
 import profile_picture from "../images/profile-picture.webp";
+import "../styles/hero_section.css";
 
 ---
 <section class="section hero">
