--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -1,4 +1,5 @@
 ---
+import "../styles/first_contents.css";
 
 ---
 
@@ -21,3 +22,4 @@
     <button class="skip_intro_button">Skip</button>
 </div>
 </section>
+<script src="../typescript/first-contents.ts" />
