--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -38,7 +38,7 @@ const { title }  = Astro.props;
 	}
 	
 	body {
-		overflow: hidden;
+		overflow: hidden auto;
 		background-color: #40a;
 	}
 
@@ -47,5 +47,14 @@ const { title }  = Astro.props;
 		border: none;
 		padding: 5px 15px;
 		cursor: pointer;
+	}
+
+	::-webkit-scrollbar {
+		width: 5px;
+		background-color: #111;
+	}
+
+	::-webkit-scrollbar-thumb {
+		background: #50c;
 	}
 </style>
