--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -12,7 +12,9 @@ const { title }  = Astro.props;
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" /><link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap" rel="stylesheet">
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
         <meta name="description" content="Ridwan Bagoes Setiawan Profile Website">
@@ -25,25 +27,27 @@ const { title }  = Astro.props;
 
 <style is:global>
     * {
-        font-family: calibri;
+        font-family: 'fira code', calibri;
 		color: white;
 		user-select: none;
 		margin:0;
 		padding:0;
+		font-weight: 300;
     }
 
 	html {
+		overflow: hidden auto;
 		width: 100vw;
 		height: 100vh;
 	}
 	
 	body {
 		overflow: hidden auto;
-		background-color: #40a;
+		background-color: #205;
 	}
 
 	button {
-		background-color: #40a;
+		background-color: #205;
 		border: none;
 		padding: 5px 15px;
 		cursor: pointer;
@@ -56,5 +60,11 @@ const { title }  = Astro.props;
 
 	::-webkit-scrollbar-thumb {
 		background: #50c;
+	}
+
+	@media (max-width: 600px) {
+		html {
+			font-size: 12px;
+		}
 	}
 </style>
