--- a/src/styles/hero_section.css
+++ b/src/styles/hero_section.css
@@ -33,7 +33,7 @@
   left: 50%;
   top: 50%;
   transform: translateX(-50%) translateY(-50%);
-  font-weight: bolder;
+  font-weight: light;
   z-index: 2;
 }
 @media (max-width: 860px) {
@@ -43,7 +43,7 @@
 }
 @media (max-width: 518px) {
   .hero_container .profile_info {
-    font-size: 0.85rem;
+    font-size: 0.75rem;
   }
 }
 .hero_container .profile_info .greeting {
@@ -52,12 +52,14 @@
 .hero_container .profile_info .profile_name {
   color: #70a;
   font-size: 2.5em;
+  font-weight: 700;
 }
 .hero_container .profile_info .profile_description {
   color: #508;
-  font-size: 2em;
+  font-size: 1.5em;
 }
 .hero_container .profile_info .call_to_action {
+  margin-top: 20px;
   font-size: 1.25rem;
   background-color: transparent;
   border: 2px solid #305;
