--- a/src/styles/showcase.css
+++ b/src/styles/showcase.css
@@ -19,14 +19,50 @@
   grid-template-columns: 1fr max-content;
   grid-auto-flow: row;
   padding: 0 50px;
+  gap: 15px;
+}
+@media (max-width: 500px) {
+  .project_content {
+    grid-auto-flow: column;
+    grid-template-columns: unset;
+    grid-template-rows: 1fr max-content;
+  }
 }
 .project_content .right_side {
+  position: relative;
   border: 3px solid #eee;
   border-radius: 15px;
   overflow: hidden;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 .project_content .white-br {
-  width: 90%;
+  width: 100%;
   height: 2px;
   background-color: #eee;
+}
+.project_content span {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  opacity: 0;
+  transition-duration: 0.25s;
+}
+.project_content img {
+  transition-duration: 0.25s;
+}
+.project_content .right_side:hover img {
+  opacity: 0.25;
+}
+.project_content .right_side:hover span {
+  opacity: 1;
+  z-index: 1;
+}
+.project_content .project_title {
+  font-size: 2.5em;
+}
+.project_content .project_description {
+  width: 100%;
+  font-size: 1em;
 }/*# sourceMappingURL=showcase.css.map */
