Add a bunch of things...
- Project additional images to data.ts
- Applies some web design principles (i know there's something i have to change later)
- Adding white <br>
- Add image_border.css

--- a/src/components/showcase.astro
+++ b/src/components/showcase.astro
@@ -16,9 +16,9 @@ import { projects } from "../typescript/data.ts";
                         {project.desc}
                     </p>
                 </div>
-                <div class="right_side">
+                <div class="image_border">
                     <a href={`/projects/${project.url}`} class="project_link">
-                        <Image src={project.image_metadata} alt={project.image_alt} fetchpriority="low" height="350" />
+                        <Image src={project.main_image} alt={project.image_alt} fetchpriority="low" height="350" />
                     </a>
                     <span>Click To Learn More..</span>
                 </div>
