--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,8 @@ import "../styles/first_contents.css";
 import "../styles/hero_section.css";
 import "../styles/showcase.css";
 import "../styles/footer.css";
+import "../styles/image_border.css";
+import "../styles/white_br.css";
 
 ---
 
