--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -3,22 +3,23 @@
 ---
 
 <section class="section intro">
-<div class="intro_background">
-    <div class="intro_content_container">
-        <div style={{opacity: 0}} class="first_content" data-speed-in="700" data-speed-out="1000" data-duration="2s">
-            <h1>Click To Next.</h1>
+    
+    <div class="intro_background">
+        <div class="intro_content_container">
+            <div style={{opacity: 0}} class="first_content" data-speed-in="700" data-speed-out="1000" data-duration="2s">
+                <p>Click To Next.</p>
+            </div>
+            <div style={{opacity: 0}} class="first_content" data-speed-in="700" data-speed-out="1000" data-duration="2s">
+                <h1>Web Developer</h1>
+            </div>
+            <div style={{opacity: 0}} class="first_content" data-speed-in="700" data-speed-out="1000" data-duration="2s">
+                <h1>Algorightm Maker</h1>
+            </div>
+            <div style={{opacity: 0}} class="first_content" data-speed-in="2000" data-speed-out="1000" data-duration="3s">
+                <h2>Coding Lover</h2>
+            </div>
         </div>
-        <div style={{opacity: 0}} class="first_content" data-speed-in="700" data-speed-out="1000" data-duration="2s">
-            <h1>Web Developers</h1>
-        </div>
-        <div style={{opacity: 0}} class="first_content" data-speed-in="700" data-speed-out="1000" data-duration="2s">
-            <h1>Algo Makers</h1>
-        </div>
-        <div style={{opacity: 0}} class="first_content" data-speed-in="2000" data-speed-out="1000" data-duration="3s">
-            <h2>Coding Lovers</h2>
-        </div>
+        <button class="skip_intro_button">Skip</button>
     </div>
-    <button class="skip_intro_button">Skip</button>
-</div>
 </section>
 <script src="../typescript/first-contents.ts" />
