--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -44,6 +44,7 @@ const { title }  = Astro.props;
 	body {
 		overflow: hidden auto;
 		background-color: #205;
+		min-height: 100vh;
 	}
 
 	button {
