--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -22,6 +22,7 @@ const { title }  = Astro.props;
 	</head>
 	<body>
         <slot />
+		<script src="../typescript/appear.ts" />
 	</body>
 </html>
 
@@ -67,5 +68,15 @@ const { title }  = Astro.props;
 		html {
 			font-size: 12px;
 		}
+	}
+
+	.smooth.appear {
+		transform: translateX(0);
+		transition: 1.25s;
+	}
+
+	.smooth:not(.appear) {
+		opacity: 0 !important;
+		transform: translateX(-10%) !important;
 	}
 </style>
