--- a/src/styles/showcase.css
+++ b/src/styles/showcase.css
@@ -3,12 +3,12 @@
 }
 
 .project {
-  padding: 150px 0 0 0;
+  padding: 150px 0 150px 0;
   background-color: #010101;
 }
 
 .project_container {
-  margin-top: 50px;
+  margin-top: 30px;
   display: grid;
   grid-auto-flow: row;
   gap: 20px;
@@ -18,14 +18,30 @@
   display: grid;
   grid-template-columns: 1fr max-content;
   grid-auto-flow: row;
-  padding: 0 50px;
   gap: 15px;
+  transition-duration: 2s !important;
+  width: 100vw;
+  padding: 0 200px;
+  box-sizing: border-box;
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
+  .project_content {
+    padding: 0 100px;
+  }
+}
+@media (max-width: 600px) {
   .project_content {
     grid-auto-flow: column;
     grid-template-columns: unset;
     grid-template-rows: 1fr max-content;
+  }
+  .project_content .image_border {
+    margin: 0 auto;
+  }
+}
+@media (max-width: 500px) {
+  .project_content {
+    padding: 0 50px;
   }
 }
 .project_content span {
@@ -39,10 +55,10 @@
 .project_content img {
   transition-duration: 0.25s;
 }
-.project_content .right_side:hover img {
+.project_content .image_border:hover img {
   opacity: 0.25;
 }
-.project_content .right_side:hover span {
+.project_content .image_border:hover span {
   opacity: 1;
   z-index: 1;
 }
