--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -15,6 +15,14 @@ section.footer div.links {
   border-radius: 30px 0 0 30px;
   gap: 20px;
 }
+@media (max-width: 550px) {
+  section.footer div.links {
+    gap: 5px;
+    width: 100%;
+    border-radius: 0;
+    padding: 0;
+  }
+}
 section.footer div.links a.link {
   display: flex;
   align-items: center;
@@ -37,6 +45,7 @@ section.footer div.links a.link > p {
 @media (max-width: 550px) {
   section.footer div.links a.link {
     padding: 5px 10px;
+    scale: 0.8;
   }
 }
 section.footer div.links a.link:hover {
