--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,6 +1,7 @@
 ---
 import { Image } from "astro:assets"
-import profile_picture from "../images/profile-picture.webp";
+import profile_picture from "../images/profile-picture.png";
+import down_arrow_image from "../images/down-arrow.png";
 
 ---
 <section class="section hero">
@@ -9,11 +10,14 @@ import profile_picture from "../images/profile-picture.webp";
             <p class="smooth greeting" data-smooth-delay="100">Hello! i'm..</p>
             <h1 class="smooth profile_name" data-smooth-delay="350">Ridwan Bagoes Setiawan</h1>
             <p class="smooth profile_description" data-smooth-delay="600">I Love Coding!</p>
-            <button class="smooth call_to_action" data-smooth-delay="1000">Find More About Me &rArr;</button>
+            <button class="smooth call_to_action" data-smooth-delay="1000"><a href="#about_me">Find More About Me &RightArrow;</a></button>
         </div>
         <div class="profile_picture">
-            <Image src={profile_picture} alt="profile picture" width="160" class="smooth profile_image" data-smooth-delay="500" />
+            <Image src={profile_picture} alt="profile picture" width="240" class="smooth profile_image" data-smooth-delay="500" />
         </div>
     </div>
     <div class="decoration"></div>
+    <a href="#about_me" class="down_arrow">
+        <Image src={down_arrow_image} alt="down arrow" width={40} />
+    </a>
 </section>
