--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,3 +15,9 @@ import "../styles/white_br.css";
 	<Showcase />
 	<Footer />
 </MainLayouts>
+
+<style is:global>
+	section {
+		overflow: hidden;
+	}
+</style>
