--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -4,6 +4,7 @@ section.footer {
   grid-template-columns: fit-content 1fr;
   grid-auto-flow: column;
   align-items: center;
+  overflow: hidden;
 }
 section.footer div.links {
   background-color: #333;
@@ -11,16 +12,21 @@ section.footer div.links {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0 0 0 20px;
+  padding: 0 20px;
   border-radius: 30px 0 0 30px;
   gap: 20px;
+}
+@media (max-width: 800px) {
+  section.footer div.links {
+    gap: 20px;
+    width: 100%;
+    border-radius: 0;
+    padding: 10px 0;
+  }
 }
 @media (max-width: 550px) {
   section.footer div.links {
     gap: 5px;
-    width: 100%;
-    border-radius: 0;
-    padding: 0;
   }
 }
 section.footer div.links a.link {
@@ -52,13 +58,14 @@ section.footer div.links a.link:hover {
   background-color: #aaa;
 }
 section.footer h1 {
-  font-size: 2rem;
+  font-size: 1.5rem;
   height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-left: 20px;
 }
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   section.footer h1 {
     display: none;
   }
