--- a/src/styles/image_border.css
+++ b/src/styles/image_border.css
@@ -5,4 +5,6 @@
   overflow: hidden;
   width: -moz-fit-content;
   width: fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
 }/*# sourceMappingURL=image_border.css.map */
