Add about me page

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -9,7 +9,7 @@ import down_arrow_image from "../images/down-arrow.png";
         <div class="profile_info">
             <p class="smooth greeting" data-smooth-delay="100">Hello! i'm..</p>
             <h1 class="smooth profile_name" data-smooth-delay="350">Ridwan Bagoes Setiawan</h1>
-            <p class="smooth profile_description" data-smooth-delay="600">I Love Coding!</p>
+            <p class="smooth profile_description" data-smooth-delay="600">FullStack Engineer</p>
             <button class="smooth call_to_action" data-smooth-delay="1000"><a href="#about_me">Find More About Me &RightArrow;</a></button>
         </div>
         <div class="profile_picture">
@@ -17,7 +17,9 @@ import down_arrow_image from "../images/down-arrow.png";
         </div>
     </div>
     <div class="decoration"></div>
-    <a href="#about_me" class="down_arrow">
-        <Image src={down_arrow_image} alt="down arrow" width={40} />
-    </a>
+    <div class="down_arrow smooth" data-smooth-delay="1200">
+        <a href="#about_me">
+            <Image src={down_arrow_image} alt="down arrow" width={30} />
+        </a>
+    </div>
 </section>
