--- a/src/styles/hero_section.css
+++ b/src/styles/hero_section.css
@@ -18,9 +18,24 @@
   position: absolute;
   left: 50%;
   bottom: 50px;
-  transform: translateX(-50%);
+}
+.hero .down_arrow > a {
+  position: relative;
+  animation-name: down_arrow;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-direction: alternate;
 }
 
+@keyframes down_arrow {
+  0% {
+    top: 10px;
+  }
+  100% {
+    top: -10px;
+  }
+}
 .hero_container {
   position: relative;
   top: 50%;
