--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,10 @@ import MainLayouts from "../layouts/MainLayout.astro";
 import Hero from "../components/hero.astro";
 import Showcase from "../components/showcase.astro";
 import Footer from "../components/footer.astro";
+import About from "../components/about.astro";
+
 import "../styles/hero_section.css";
+import "../styles/about.css";
 import "../styles/showcase.css";
 import "../styles/image_border.css";
 import "../styles/white_br.css";
@@ -12,6 +15,7 @@ import "../styles/white_br.css";
 
 <MainLayouts title="Realm">
 	<Hero />
+	<About />
 	<Showcase />
 	<Footer />
 </MainLayouts>
