--- a/src/pages/projects/[project_url].astro
+++ b/src/pages/projects/[project_url].astro
@@ -89,5 +89,8 @@ const project = projects.filter((data) =>
             </div>
         </div>
     </div>
+    <button class="back-to-home">
+        <a href="../">Back to home</a>
+    </button>
     <Footer />
 </MainLayout>
