Add more content to about section + make it responsive + changes in data.ts

--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -4,8 +4,10 @@
 
 <section class="about" id="about_me">
     <div class="about_container">
-        <h1>About me..</h1>
-        <p>Hi. I'm Ridwan Bagoes Setiawan. <b>I love coding!</b> <u>i start coding at 14</u>. Until now, i think that day is one of the most important thing in my life. It's because when i start coding that day i feel like maybe i found my <u>passion</u>. The <i>productive thing</i> that i like! that i'll sacrifice time to playing games, playing with friends, or watching animes for it.</p>
-        <p><u>I like to make some projects for improving my coding skill</u>. I always find some time for coding. When i go to school, when i go to my hometown, even when i go to mall or supermarket. I always want to improve my coding skills everywhere with whether using smartphone or laptop.</p>
+        <h1 class="smooth">About me..</h1>
+        <p class="smooth">Hi. I'm Ridwan Bagoes Setiawan. <b>I love programming!</b> <u>i started to learn programming at 14</u>. Until now, i think that day is one of the most important thing in my life. It's because when i started programming that day i thought i found my <u>passion</u>. The <q>productive thing</q> that i like! that i'll sacrifice time for learning it deeply instead of playing games, playing with friends, or watching animes.</p>
+        <p class="smooth"><u>I like to make some projects for improving my programming skill</u>. I always searching time for learn something new about technology. When i go to school, when i go to my hometown, even when i go to mall or supermarket. I always want to improve my programming skills everywhere with whether using smartphone or laptop.</p>
+        <p class="smooth"><u>My dream is become a FullStack Developer</u> because of that, there's no a single day in my life without learning programming. That's my <b>determination</b>. Even though sometimes it's frustrating, stressing, and makes me sick, I still never give up. I believe that there's myself in future that saying to me "You can do this! You're on the right path."</p>
+        <p class="quote smooth"><q>It's hard, but it's worth it.</q></p>
     </div>
 </section>
