--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -79,5 +79,6 @@ const { title }  = Astro.props;
 	.smooth:not(.appear) {
 		opacity: 0 !important;
 		transform: translateX(-10%) !important;
+		pointer-events: none !important;
 	}
 </style>
