--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import "../styles/white_br.css";
 
 ---
 
-<MainLayouts title="Realm">
+<MainLayouts title="Ridwan's Entrance">
 	<Hero />
 	<About />
 	<Showcase />
