--- a/src/components/showcase.astro
+++ b/src/components/showcase.astro
@@ -4,7 +4,7 @@ import { projects } from "../typescript/data.ts";
 
 ---
 
-<section class="section project">
+<section class="section project" id="showcase">
 	<p class="statement">I make some website project to improve my coding skill</p>
     <div class="project_container">
         {projects.map((project) => (
