--- a/src/styles/hero_section.css
+++ b/src/styles/hero_section.css
@@ -1,4 +1,5 @@
 .hero {
+  position: relative;
   background-color: #111;
   width: 100vw;
   height: calc(100vh - 100px);
@@ -14,12 +15,13 @@
   transform: translateX(-50%) translateY(-50%);
   z-index: 0;
 }
-.hero .down_arrow {
+
+.down_arrow {
   position: absolute;
   left: 50%;
   bottom: 50px;
 }
-.hero .down_arrow > a {
+.down_arrow > a {
   position: relative;
   animation-name: down_arrow;
   animation-duration: 2s;
