Change some text in about section, project full description and first showcase statement

--- a/src/components/showcase.astro
+++ b/src/components/showcase.astro
@@ -5,7 +5,7 @@ import { projects } from "../typescript/data.ts";
 ---
 
 <section class="section project" id="showcase">
-	<p class="statement">I make some website project to improve my coding skill</p>
+	<p class="statement">I've already make 3 website projects within 1-2 months to improve my programming skill</p>
     <div class="project_container">
         {projects.map((project) => (
             <div class="project_content smooth">
