--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -19,7 +19,7 @@ import down_arrow_image from "../images/down-arrow.png";
     <div class="decoration"></div>
     <div class="down_arrow smooth" data-smooth-delay="1200">
         <a href="#about_me">
-            <Image src={down_arrow_image} alt="down arrow" width={30} />
+            <Image src={down_arrow_image} alt="down arrow" width={30} fetchpriority="high" />
         </a>
     </div>
 </section>
