--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -12,9 +12,6 @@ const { title }  = Astro.props;
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" /><link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap" rel="stylesheet">
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
         <meta name="description" content="Ridwan Bagoes Setiawan Profile Website">
@@ -27,6 +24,19 @@ const { title }  = Astro.props;
 </html>
 
 <style is:global>
+	@font-face {
+		font-family: fira code;
+		src: url("../fonts/Fira_Code/static/FiraCode-Light.ttf"),
+		url("../fonts/Fira_Code/static/FiraCode-Medium.ttf"),
+		url("../fonts/Fira_Code/static/FiraCode-Regular.ttf"),
+		url("../fonts/Fira_Code/static/FiraCode-SemiBold.ttf"),
+		url("../fonts/Fira_Code/static/FiraCode-Bold.ttf")
+		;
+		font-weight: 300;
+		font-style: normal;
+		font-display: swap;
+	}
+
     * {
         font-family: 'fira code', calibri;
 		color: white;
